# spring-2026-lab10-Siyu-H

./: README.md  agent-evaluation-theory.md  pyproject.toml
multi-turn-agent-evals/: .env.example  EXERCISE.md  README.md  agent.py  analysis.md  architecture.md  eval.py  eval_metrics.json  metrics.txt  scenarios.json  tools.py
multi-turn-agent-evals/prompts/: system_prompt.txt
simple-agent-evals/: .env.example  EXERCISE.md  README.md  agent.py  analysis.md  architecture.md  dataset.json  dataset2.json  eval.py  eval_metrics.json  eval_metrics2.json  tools.py
simple-agent-evals/prompts/: system_prompt.txt
